--- a/DOVE.Application/DOVE.Application.Web/Areas/BaseManage/Views/User/Index.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Areas/BaseManage/Views/User/Index.cshtml
@@ -34,7 +34,9 @@
                 {
                     label: '性别', name: 'Gender', index: 'Gender', width: 45, align: 'center',
                     formatter: function (cellvalue, options, rowObject) {
-                        return cellvalue == 1 ? "男" : "女";
+                        if (cellvalue == 1) return "男";
+                        else if (cellvalue == 0) return "女";
+                        else return "";
                     }
                 },
                 { label: '手机', name: 'Mobile', index: 'Mobile', width: 100, align: 'center' },
@@ -75,7 +77,7 @@
             rowNum: 30,
             rowList: [30, 50, 100],
             pager: "#gridPager",
-            sortname: 'OrganizeId asc,CreateDate desc',
+            sortname: 'Account asc',
             rownumbers: true,
             shrinkToFit: false,
             gridview: true,
