--- a/DOVE.Application/DOVE.Application.Web/Views/Shared/_FlowForm.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Views/Shared/_FlowForm.cshtml
@@ -36,7 +36,8 @@
     <script src="~/Content/scripts/utils/DOVE-form.js"></script>
     <link href="~/Content/styles/DOVE-ui.css" rel="stylesheet" />*@
     <script src="~/Content/scripts/plugins/datepicker/WdatePicker.js"></script>
-
+    <script src="~/Content/scripts/utils/DOVE-ui.js"></script>
+    <script src="~/Content/scripts/utils/DOVE-form.js"></script>
     @System.Web.Optimization.Styles.Render("~/Content/scripts/plugins/tree/css",
     "~/Content/scripts/plugins/datetime/css",
     "~/Content/scripts/plugins/wizard/css",
@@ -44,8 +45,9 @@
     @System.Web.Optimization.Scripts.Render("~/Content/scripts/plugins/tree/js",
     "~/Content/scripts/plugins/validator/js",
     "~/Content/scripts/plugins/wizard/js",
-            "~/Content/scripts/plugins/datepicker/js",
-    "~/Content/scripts/utils/js")
+            "~/Content/scripts/plugins/datepicker/js"
+    //"~/Content/scripts/utils/js"
+    )
 
     @*<link href="~/Content/styles/DOVE-ckbox-radio.css" rel="stylesheet" />
         <link href="~/Content/styles/DOVE-applayout.css" rel="stylesheet" />
