活动管理工能上传

--- a/DOVE.Application/DOVE.Application.Web/Areas/GeneratorManage/Views/SingleTable/CodeBuilder.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Areas/GeneratorManage/Views/SingleTable/CodeBuilder.cshtml
@@ -23,7 +23,7 @@
         $("#OutputAreas").ComboBox({
             description: "==请选择==",
             height: "200px"
-        }).ComboBoxSetValue('MESManage');
+        }).ComboBoxSetValue('DoveManage');
         //}).ComboBoxSetValue('BaseManage');
         //功能上级
         $("#ModuleParentId").ComboBoxTree({
@@ -571,7 +571,7 @@
                             <td class="formValue">
                                 <div id="OutputAreas" type="select" class="ui-select" isvalid="yes" checkexpession="NotNull">
                                     <ul>
-                                        <li data-value="MESManage">MESManage</li>
+                                        <li data-value="DoveManage">DoveManage</li>
                                         <li data-value="AuthorizeManage">AuthorizeManage</li>
                                         <li data-value="BaseManage">BaseManage</li>
                                         <li data-value="CustomerManage">CustomerManage</li>
