--- a/DOVE.Application/DOVE.Application.Web/Areas/DoveManage/Views/T_Activity/T_ActivityIndex.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Areas/DoveManage/Views/T_Activity/T_ActivityIndex.cshtml
@@ -31,22 +31,23 @@
             postData: { queryJson: JSON.stringify(queryJson) },
             datatype: "json",
             colModel: [
-                { label: '活动名称', name: 'activityname', index: 'activityname', width: 100, align: 'left',sortable: true  },
-                { label: '活动编号', name: 'activitycode', index: 'activitycode', width: 100, align: 'left',sortable: true  },
-                { label: '活动地点', name: 'address', index: 'address', width: 100, align: 'left',sortable: true  },
-                { label: '活动内容', name: 'content', index: 'content', width: 100, align: 'left',sortable: true  },
-                { label: '活动开始时间', name: 'activitystarttime', index: 'activitystarttime', width: 100, align: 'left',sortable: true  },
-                { label: '活动结束时间', name: 'activityendtime', index: 'activityendtime', width: 100, align: 'left',sortable: true  },
-                { label: '报名开始时间', name: 'signupstarttime', index: 'signupstarttime', width: 100, align: 'left',sortable: true  },
-                { label: '报名截止时间', name: 'signupendtime', index: 'signupendtime', width: 100, align: 'left',sortable: true  },
-                { label: '发起人ID', name: 'initiator', index: 'initiator', width: 100, align: 'left',sortable: true  },
-                { label: '备注', name: 'description', index: 'description', width: 100, align: 'left',sortable: true  },
+                { label: '活动ID', name: 'activityid', index: 'activityid', width: 80, align: 'left', sortable: true, hidden: true },
+                { label: '活动编号', name: 'activitycode', index: 'activitycode', width: 80, align: 'left', sortable: true },
+                { label: '活动名称', name: 'activityname', index: 'activityname', width: 200, align: 'left', sortable: true },
+                { label: '活动地点', name: 'address', index: 'address', width: 100, align: 'left', sortable: true },
+                { label: '活动内容', name: 'content', index: 'content', width: 200, align: 'left', sortable: true },
+                { label: '活动开始时间', name: 'activitystarttime', index: 'activitystarttime', width: 150, align: 'left', sortable: true },
+                { label: '活动结束时间', name: 'activityendtime', index: 'activityendtime', width: 150, align: 'left', sortable: true },
+                { label: '报名开始时间', name: 'signupstarttime', index: 'signupstarttime', width: 150, align: 'left', sortable: true },
+                { label: '报名截止时间', name: 'signupendtime', index: 'signupendtime', width: 150, align: 'left', sortable: true },
+                { label: '发起人ID', name: 'initiator', index: 'initiator', width: 100, align: 'left', sortable: true },
+                { label: '备注', name: 'description', index: 'description', width: 100, align: 'left', sortable: true }
             ],
             viewrecords: true,
-            rowNum: 30,
-            rowList: [30, 50, 100],
+            rowNum: 100,
+            rowList: [100, 200, 500],
             pager: "#gridPager",
-            sortname: '',
+            sortname: 'activitycode',
             sortorder: 'desc',
             rownumbers: true,
             shrinkToFit: false,
@@ -56,6 +57,34 @@
             },
             gridComplete: function () {
                 $('#' + this.id).setSelection(selectedRowIndex, false);
+            },
+            subGrid: true,
+            subGridRowExpanded: function (subgrid_id, row_id) {
+                var queryJson = $(".title-search").GetWebControls();
+                queryJson["activityid"] = $gridTable.jqGrid('getRowData', row_id)['activityid'];
+                var subgrid_table_id = subgrid_id + "_t";
+                $("#" + subgrid_id).html("<table id='" + subgrid_table_id + "'></table>");
+                $("#" + subgrid_table_id).jqGrid({
+                    url: "../../DoveManage/T_Activity/GetDetailListJson",
+                    postData: { queryJson: JSON.stringify(queryJson) },
+                    datatype: "json",
+                    height: "100%",
+                    colModel: [
+                        { label: '编号', name: 'account', index: 'account', width: 60, align: 'left', sortable: true },
+                        { label: '姓名', name: 'realname', index: 'realname', width: 100, align: 'left', sortable: true },
+                        { label: '昵称', name: 'nickname', index: 'nickname', width: 100, align: 'left', sortable: true },
+                        { label: '备注', name: 'description', index: 'description', width: 200, align: 'left', sortable: true },
+                        { label: '报名时间', name: 'time', index: 'time', width: 150, align: 'left', sortable: true }
+                    ],
+                    caption: "活动参与详情",
+                    rownumbers: true,
+                    shrinkToFit: false,
+                    gridview: true,
+                    hidegrid: false,
+                    loadComplete: function (xhr) {
+
+                    }
+                });
             }
         });
         $gridTable.authorizeColModel();
@@ -66,8 +95,8 @@
             id: 'Form',
             title: '添加活动信息表',
             url: '/DoveManage/T_Activity/T_ActivityForm',
-            width: 'px',
-            height: 'px',
+            width: '700px',
+            height: '500px',
             callBack: function (iframeId) {
                 top.frames[iframeId].AcceptClick();
             }
@@ -107,42 +136,55 @@
     //打印
     function btn_print() {
         dialogOpen({
-             id: "PrintPageDialog",
-             title: '打印当前页',
-             url: '/Utility/PrintPage',
-             width: "1200px",
-             height: "500px",
-             callBack: function (iframeId) {
+            id: "PrintPageDialog",
+            title: '打印当前页',
+            url: '/Utility/PrintPage',
+            width: "1200px",
+            height: "500px",
+            callBack: function (iframeId) {
                 top.frames[iframeId].SubmitPrint();
-             }, btn: ['打印', '关闭']
+            }, btn: ['打印', '关闭']
         });
     }
     //要打印数据源，子页面调用的函数
-    function PrintDataSource () {
+    function PrintDataSource() {
         var $printArea = $('.printArea');
         return $printArea;
     }
     //导出
     function btn_export() {
         dialogOpen({
-             id: "ExcelIExportDialog",
-             title: '导出报表',
-             url: '/Utility/ExcelExportForm?gridId=gridTable&filename=报表导出' + formatDate(new Date(), 'yyyy-mm-dd'),
-             width: "500px",
-             height: "380px",
-             callBack: function (iframeId) {
+            id: "ExcelIExportDialog",
+            title: '导出报表',
+            url: '/Utility/ExcelExportForm?gridId=gridTable&filename=报表导出' + formatDate(new Date(), 'yyyy-mm-dd'),
+            width: "500px",
+            height: "380px",
+            callBack: function (iframeId) {
                 top.frames[iframeId].AcceptClick();
-             }, btn: ['导出Excel', '关闭']
+            }, btn: ['导出Excel', '关闭']
+        });
+    }
+    //多个活动导入
+    function btn_import() {
+        dialogOpen({
+            id: "ExcelIImportDialog",
+            title: '多个活动导入',
+            url: '/PublicInfoManage/ResourceFile/UploadifyActivityForm',
+            width: "600px",
+            height: "450px",
+            callBack: function (iframeId) {
+                top.frames[iframeId].AcceptClick();
+            }, btn: ['确定', '关闭']
         });
     }
     //查询表格函数
     function SearchEvent() {
         var queryJson = $(".title-search").GetWebControls();
-             $("#gridTable").jqGrid('setGridParam', {
-             url: "../../DoveManage/T_Activity/GetPageListJson",
-             postData: { queryJson: JSON.stringify(queryJson) },
-             page: 1
-             }).trigger('reloadGrid');
+        $("#gridTable").jqGrid('setGridParam', {
+            url: "../../DoveManage/T_Activity/GetPageListJson",
+            postData: { queryJson: JSON.stringify(queryJson) },
+            page: 1
+        }).trigger('reloadGrid');
     }
 </script>
 <div class="titlePanel">
@@ -158,6 +200,7 @@
             <a id="lr-delete" class="btn btn-default" onclick="btn_delete()"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
             <a id="lr-print" class="btn btn-default" onclick="btn_print()"><i class="fa fa-print"></i>打印</a>
             <a id="lr-export" class="btn btn-default" onclick="btn_export()"><i class="fa fa-sign-out"></i>导出</a>
+            <a id="lr-import" class="btn btn-default" onclick="btn_import()"><i class="fa fa-sign-out"></i>多活动导入</a>
         </div>
         <script>$('.toolbar').authorizeButton()</script>
     </div>
