--- a/DOVE.Application/DOVE.Application.Web/Areas/PublicInfoManage/Views/ResourceFile/Index.cshtml
+++ b/DOVE.Application/DOVE.Application.Web/Areas/PublicInfoManage/Views/ResourceFile/Index.cshtml
@@ -63,7 +63,7 @@
     function GetGrid() {
         var $gridTable = $("#gridTable");
         var queryJson = {
-            folderId: "",
+            folderId: fileId,
             type: "",
             keyword: $("#txt_Keyword").val()
         }
@@ -129,8 +129,9 @@
                         //$gridTable.jqGrid('setGridParam', {
                         //    postData: { folderId: $(this).attr('data-fileId') },
                         //}).trigger('reloadGrid');
+                        fileId = $(this).attr('data-fileId');
                         var queryJson = {
-                            folderId: $(this).attr('data-fileId'),
+                            folderId: fileId,
                             type: $("#hidtype").val(),
                             keyword: $("#txt_Keyword").val()
                         }
@@ -145,13 +146,16 @@
         //返回上一级、返回所有文件
         $(".crumb-path span").click(function () {
             var value = $(this).attr('data-folderId');
-            var folderId = $(".crumb-path span:last").attr('data-folderId');
+            //var folderId = $(".crumb-path span:last").attr('data-folderId');
+            fileId = $(".crumb-path span:last").attr('data-folderId');
             if (value == "back") {
-                if (folderId == 0) {
+                //if (folderId == 0) {
+                if (fileId == 0) {
                     $(".crumb-path .back").hide();
                 }
                 var queryJson = {
-                    folderId: folderId,
+                    //folderId: folderId,
+                    folderId: fileId,
                     type: $("#hidtype").val(),
                     keyword: $("#txt_Keyword").val()
                 }
@@ -160,8 +164,9 @@
                 }).trigger('reloadGrid');
                 $(".crumb-path span:last").remove()
             } else {
+                fileId = 0;
                 var queryJson = {
-                    folderId: 0,
+                    folderId: fileId,
                     type: $("#hidtype").val(),
                     keyword: $("#txt_Keyword").val()
                 }
@@ -253,7 +258,7 @@
         //查询按钮事件
         $("#btn_Search").click(function () {
             var queryJson = {
-                folderId: "",
+                folderId: fileId,
                 type: $("#hidtype").val(),
                 keyword: $("#txt_Keyword").val()
             }
@@ -261,6 +266,12 @@
                 url: _url,
                 postData: { queryJson: JSON.stringify(queryJson) }
             }).trigger('reloadGrid');
+        });
+        //查询回车
+        $('#txt_Keyword').bind('keypress', function (event) {
+            if (event.keyCode == "13") {
+                $('#btn_Search').trigger("click");
+            }
         });
     }
     //上传文件
@@ -450,6 +461,7 @@
                             <a id="lr-addfolder" class="btn btn-default" onclick="btn_add_folder()"><i class="fa fa-plus"></i>&nbsp;新建文件夹</a>
                         </div>
                         <div class="btn-group">
+                            <a id="lr-replace" class="btn btn-default" onclick="reload();"><i class="fa fa-refresh"></i>&nbsp;刷新</a>
                             <a id="lr-download" class="btn btn-default" onclick="btn_download()"><i class="fa fa-download"></i>&nbsp;下载</a>
                             <a id="lr-delete" class="btn btn-default" onclick="btn_delete()"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
                             <a id="lr-share" class="btn btn-default" onclick="btn_share(1)"><i class="fa fa-share-alt"></i>&nbsp;共享</a>
